--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.7.0",
@@ -26,6 +26,7 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.2.0",
+    "styled-components": "^5.1.0",
     "yup": "^0.27.0"
   },
   "scripts": {
