--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-boiler-plate",
+  "name": "famcloud",
   "version": "1.0.0",
-  "description": "react boiler plate",
+  "description": "mern traveling family album",
   "main": "index.js",
   "engine": {
     "node": "10.16.0",
