--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mern traveling family album",
   "main": "index.js",
   "engine": {
-    "node": "10.16.0",
+    "node": "^10.16.0.x",
     "npm": "6.9.0"
   },
   "scripts": {
