--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,6 @@
     "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
     "redux": "^4.0.0",
     "redux-form": "^8.2.6",
     "redux-promise": "^0.6.0",
@@ -52,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^0.19.1"
+    "http-proxy-middleware": "^0.19.1",
+    "react-scripts": "^3.0.1"
   }
 }
