--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.0.0",
     "redux-form": "^8.2.6",
     "redux-promise": "^0.6.0",
+    "react-scripts": "^3.0.1",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.2.0",
     "styled-components": "^5.1.0",
@@ -51,7 +52,6 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^0.19.1",
-    "react-scripts": "^3.0.1"
+    "http-proxy-middleware": "^0.19.1"
   }
 }
