--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^0.19.1"
+    "http-proxy-middleware": "^0.19.1",
+    "react-scripts": "^3.0.1"
   }
 }
