--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "antd": "^3.24.1",
     "axios": "^0.18.0",
     "formik": "^1.5.8",
+    "https-proxy-agent": "^5.0.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -21,10 +22,10 @@
     "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "redux": "^4.0.0",
     "redux-form": "^8.2.6",
     "redux-promise": "^0.6.0",
-    "react-scripts": "^3.0.1",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.2.0",
     "styled-components": "^5.1.0",
