--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "formik": "^1.5.8",
     "https-proxy-agent": "^5.0.0",
+    "jquery": "^3.5.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
