--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.1.0",
+    "aws-sdk": "^2.661.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -31,8 +32,11 @@
     "moment": "^2.24.0",
     "mongoose": "^5.4.20",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "path": "^0.12.7",
     "react-redux": "^5.0.7",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
